TextArea scrollbar mini-fix, selected&block color adjusted to theme

--- a/src/controller/style.css
+++ b/src/controller/style.css
@@ -54,6 +54,8 @@
 }
 .text-area .scroll-pane .content{
     -fx-background-color: #454545;
+    -fx-text-fill: #a56161;
+    -fx-font-size: 11;
 }
 .text-area .content{
 
@@ -64,13 +66,16 @@
     -fx-border-color: transparent;
     -fx-stroke: transparent;
     -fx-border-style: none;
-    -fx-background-color: #454545;
+    -fx-background-color: #a56161;
+    -fx-font-size: 11;
 }
 .text-area{
     -fx-background-color: transparent;
     -fx-border-color: transparent;
     -fx-stroke: transparent;
     -fx-border-style: none;
+    -fx-text-fill: #a56161;
+    -fx-font-size: 11;
 }
 
 
@@ -122,7 +127,7 @@
 .table-view .column-header-background{
     -fx-background-color: linear-gradient(to bottom, #4e4e4e, #454545, #4e4e4e);
     -fx-background-radius: 5px 5px 0px 0px;
-    -fx-background-insets: 0 0 0 0;
+
 }
 .table-view .table-cell{
     -fx-border-color: transparent;
@@ -132,34 +137,46 @@
 }
 .table-row-cell:odd{
     -fx-background-color: #454545;
-    -fx-background-insets: 0, 0 0 0 0;
+
     -fx-padding: 0.0em;
 }
 .table-row-cell:even{
     -fx-background-color: #4e4e4e;
-    -fx-background-insets: 0, 0 0 0 0;
+
     -fx-padding: 0.0em;
 }
-.table-view .virtual-flow .scroll-bar:vertical,
-.table-view .virtual-flow .scroll-bar:vertical .track,
-.table-view .virtual-flow .scroll-bar:vertical .track-background,
-.table-view .virtual-flow .scroll-bar:horizontal,
-.table-view .virtual-flow .scroll-bar:horizontal .track,
-.table-view .virtual-flow .scroll-bar:horizontal .track-background {
+.scroll-bar:vertical,
+.virtual-flow .scroll-bar:vertical .track,
+.virtual-flow .scroll-bar:vertical .track-background,
+.virtual-flow .scroll-bar:horizontal,
+.virtual-flow .scroll-bar:horizontal .track,
+.virtual-flow .scroll-bar:horizontal .track-background {
     -fx-background-color: transparent;
 }
-.table-view .virtual-flow .scroll-bar .increment-button,
-.table-view .virtual-flow .scroll-bar .decrement-button {
-    -fx-opacity: 0;
-    -fx-padding: 2;
+
+.scroll-bar .increment-button,
+.scroll-bar .decrement-button,
+.virtual-flow .scroll-bar .increment-button,
+.virtual-flow .scroll-bar .decrement-button {
+    -fx-opacity: 1;
+    -fx-padding: 0.49 2 0.49 2;
 }
 
-.table-view .virtual-flow .scroll-bar:vertical .thumb{
+.scroll-bar .increment-button:hover,
+.scroll-bar .decrement-button:hover,
+.virtual-flow .scroll-bar .increment-button:hover,
+.virtual-flow .scroll-bar .decrement-button:hover {
+    -fx-opacity: .5;
+    -fx-background-color: transparent;
+}
+
+.scroll-bar:vertical .thumb{
     -fx-background-color: linear-gradient(to bottom, #454545, #4e4e4e);
 }
-.table-view .virtual-flow .scroll-bar:horizontal .thumb {
+.scroll-bar:horizontal .thumb {
     -fx-background-color: linear-gradient(to bottom, #454545, #4e4e4e);
 }
+
 .table-view .cell{
     -fx-border-color: transparent #454545 transparent #454545;
     -fx-text-fill: #cccccc;
@@ -172,5 +189,19 @@
 }
 .full_shelve{
     -fx-fill: #dcb94f;
+    -fx-stroke: #2b2b2c;
+    -fx-stroke-width: .5;
+}
+
+.selected_shelve{
+    -fx-fill: #ea9143;
+    -fx-stroke: #2b2b2c;
+    -fx-stroke-width: .5;
+}
+
+.blocked{
+    -fx-fill: #4e4e4e;
+    -fx-stroke: #2b2b2c;
+    -fx-stroke-width: .5;
 }
 
